--- a/default.prod.conf
+++ b/default.prod.conf
@@ -2,7 +2,7 @@ server {
     listen 443 ssl;
     listen 80 ssl;
 
-    server_name laravel-docker.test;
+    server_name kevin.informaticamajada.es;
 
     root /var/www/html/public;
     index index.php index.html;
@@ -20,6 +20,6 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    ssl_certificate /etc/nginx/certs/laravel-docker.test.pem;
-    ssl_certificate_key /etc/nginx/certs/laravel-docker.test-key.pem;
+    ssl_certificate /etc/nginx/certs/kevin.informaticamajada.es.pem;
+    ssl_certificate_key /etc/nginx/certs/kevin.informaticamajada.es-key.pem;
 }
